move header image out of body, fix top spacing, some main menu styling, organizing css a bit

--- a/cod-7.x-1.0-beta1/sites/all/themes/ccgd/css/ccgd.css
+++ b/cod-7.x-1.0-beta1/sites/all/themes/ccgd/css/ccgd.css
@@ -1,32 +1,29 @@
+/* Colors 
+*  light blue = #70a3eb
+*  light gray = #b7b9bb
+*/
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-.tb-megamenu {
-  background: none;
-}
+body.admin-menu { margin-top: 29px !important; }
 
-#page-wrapper,
-#page,
-#main-wrapper {
-  background: none;
-}
+/* -- Headings -- */
 
-#header {
-  background: #70a3eb;
-}
+h1, h2, h3, h3 { font-family: 'Open Sans', sans-serif; letter-spacing: -1px; }
 
-#main #content {
-  background: #fff;
-  display: inline-block;
-  width: 100%;
-}
+h1 { font-size: 2.6em; }
+h2 { font-size: 2.2em; padding-bottom: 15px; }
 
-#main #content .panel-panel.header {
-  display: none;
-}
+/* -- Layout -- */
 
-.region-header {
-  margin: 5px 0;
-}
+#page-wrapper, #page, #main-wrapper { background: none; }
+#header { background: #70a3eb; }
+#page-wrapper { background-color: #70a3eb; }
+#main #content { background: #fff; display: inline-block; width: 100%; }
+#main #content .panel-panel.header { display: none; }
+.region-header { margin: 5px 0; }
+
+/* -- Branding -- */
 
 #logo {
   padding: 15px 15px 15px 0; /* LTR */
@@ -39,9 +36,16 @@
   position: relative;
 }
 #logo img { position: relative; top: -100px; }
-/**
- * Mega Menu.
- */
+
+/* -- Menus -- */
+
+#main-menu { clear: none; float: right; }
+#main-menu ul li a { color: #b7b9bb; text-transform: uppercase; font-weight: bold; text-shadow: none; font-size: 1.2em; height: 24px; line-height: 24px; padding: 20px 10px; display: inline-block; white-space: nowrap; }
+#main-menu ul li a:hover, #main-menu ul li a:focus { color: #70a3eb; }
+
+/* -- Mega Menu -- */
+
+.tb-megamenu { background: none; }
 
 .tb-megamenu .nav > li > a,
 .tb-megamenu .nav > .active > a, 
@@ -74,33 +78,20 @@
   background: url(../images/menu-icon.png) no-repeat 0 50%;
 }
 
-/** 
- * Headings.
- */
-
-#content h2 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2.2em;
-  letter-spacing: -1px;
-  padding-bottom: 15px;
-}
-
-/**
- * Panels
-*/
+/* -- Panels -- */
 
 .panel-panel.unit { width: 100%; }
 
-/**
- * Responsive
-*/
+/* -- Breadcrumb -- */
+
+.breadcrumb { background-color: #fff; }
+
+/* -- Responsive -- */
 
 @media all and (min-width: 560px) and (max-width: 850px) {
   
-  body {
-    background: url(../images/ccgd-banner-home-s.png) #fff no-repeat 50% 64px;
-  }
-  #main-wrapper { margin-top: 170px; }
+  #messages { position: absolute; width: 100%; }
+  #main-wrapper { padding-top: 170px; background: url(../images/ccgd-banner-home-s.png) #70a3eb no-repeat 50% top;}
   #header { background: #fff; }
   #logo { background: none; width: auto; }
   #logo img { top: 0; }
@@ -108,10 +99,8 @@
 
 @media all and (min-width: 851px) and (max-width: 1100px) {
   
-  body {
-    background: url(../images/ccgd-banner-home-m.png) #fff no-repeat 50% 64px;
-  }
-  #main-wrapper { margin-top: 280px; }
+  #messages { position: absolute; width: 100%; }
+  #main-wrapper { padding-top: 280px; background: url(../images/ccgd-banner-home-m.png) #70a3eb no-repeat 50% top; }
   #block-system-main .left { width: 63%; }
   #block-system-main .right { width: 37%; }
   #header { background: #fff; }
@@ -122,10 +111,8 @@
 
 @media all and (min-width: 1101px) {
   
-  body {
-    background: url(../images/ccgd-banner-home-l.png) #fff no-repeat 50% 64px;
-  }
-  #main-wrapper { margin-top: 390px; }
+  #messages #messages { position: absolute; width: 100%; }
+  #main-wrapper { padding-top: 390px; background: url(../images/ccgd-banner-home-l.png) #70a3eb no-repeat 50% top; }
   #block-system-main .left { width: 63%; }
   #block-system-main .right { width: 37%; }
   #header { background: #fff; }
@@ -134,8 +121,9 @@
   
 }
 
-/* Mobile menu */
-@media all and (max-width: 950px) {
+/* -- Mobile menu -- */
+@media all and (max-width: 900px) {
   .tb-megamenu .nav-collapse { width: 300px; right: 0; }
   .tb-megamenu .nav > li.mega > a { background: none !important; }
+  #main-menu-links li { width: auto; }
 }
